--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "mutable-buffer": "^2.1.1",
     "printer": "^0.2.2",
     "qr-image": "^3.2.0"
+  },
+  "homepage": "https://github.com/JC-2014/node-printer-escpos",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:JC-2014/node-printer-escpos.git"
   }
 }
